--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 .emacs.d/backups/*
 .emacs.d/ac-comphist.dat
+.emacs.d/session*
 .emacs.d/auto-save-list/*
 .emacs.d/games/*-scores
 *.cache
+
+## EMACS
+*~
+\#*
+.\#*
